@@ -1,3 +1,9 @@
+2002-08-10  Terry Biggs <tbiggs@users.sourceforge.net>
+
+	* fixed one module and settings set to first module crash
+	
+	
+
 2002-08-09  Terry Biggs <tbiggs@users.sourceforge.net>
 
 	* changed preferences file to preferences-1.0.conf
